--- a/submitted.tex
+++ b/submitted.tex
@@ -44,28 +44,14 @@
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 \setcounter{secnumdepth}{5}
 % Make \paragraph and \subparagraph free-standing
-\makeatletter
 \ifx\paragraph\undefined\else
   \let\oldparagraph\paragraph
-  \renewcommand{\paragraph}{
-    \@ifstar
-      \xxxParagraphStar
-      \xxxParagraphNoStar
-  }
-  \newcommand{\xxxParagraphStar}[1]{\oldparagraph*{#1}\mbox{}}
-  \newcommand{\xxxParagraphNoStar}[1]{\oldparagraph{#1}\mbox{}}
+  \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
 \fi
 \ifx\subparagraph\undefined\else
   \let\oldsubparagraph\subparagraph
-  \renewcommand{\subparagraph}{
-    \@ifstar
-      \xxxSubParagraphStar
-      \xxxSubParagraphNoStar
-  }
-  \newcommand{\xxxSubParagraphStar}[1]{\oldsubparagraph*{#1}\mbox{}}
-  \newcommand{\xxxSubParagraphNoStar}[1]{\oldsubparagraph{#1}\mbox{}}
+  \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
-\makeatother
 
 
 \providecommand{\tightlist}{%
@@ -81,17 +67,15 @@
 \makesavenoteenv{longtable}
 \usepackage{graphicx}
 \makeatletter
-\newsavebox\pandoc@box
-\newcommand*\pandocbounded[1]{% scales image to fit in text height/width
-  \sbox\pandoc@box{#1}%
-  \Gscale@div\@tempa{\textheight}{\dimexpr\ht\pandoc@box+\dp\pandoc@box\relax}%
-  \Gscale@div\@tempb{\linewidth}{\wd\pandoc@box}%
-  \ifdim\@tempb\p@<\@tempa\p@\let\@tempa\@tempb\fi% select the smaller of both
-  \ifdim\@tempa\p@<\p@\scalebox{\@tempa}{\usebox\pandoc@box}%
-  \else\usebox{\pandoc@box}%
-  \fi%
-}
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
 % Set default figure placement to htbp
+\makeatletter
 \def\fps@figure{htbp}
 \makeatother
 % definitions for citeproc citations
@@ -129,20 +113,6 @@
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 \usepackage{rotating}
-\usepackage{booktabs}
-\usepackage{longtable}
-\usepackage{array}
-\usepackage{multirow}
-\usepackage{wrapfig}
-\usepackage{float}
-\usepackage{colortbl}
-\usepackage{pdflscape}
-\usepackage{tabu}
-\usepackage{threeparttable}
-\usepackage{threeparttablex}
-\usepackage[normalem]{ulem}
-\usepackage{makecell}
-\usepackage{xcolor}
 \makeatletter
 \@ifpackageloaded{bookmark}{}{\usepackage{bookmark}}
 \makeatother
@@ -187,8 +157,10 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\journal{WSTLUR Symposium 2024}
-
+\journal{Journal of Transport and Land Use}
+\ifLuaTeX
+  \usepackage{selnolig}  % disable illegal ligatures
+\fi
 \usepackage{bookmark}
 
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
@@ -204,7 +176,6 @@ nutrition, Passive location data},
   citecolor={Blue},
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
-
 
 \setlength{\parindent}{6pt}
 \begin{document}
@@ -273,7 +244,6 @@ nutrition \sep
 \end{keyword}
 \end{frontmatter}
     
-
 \bookmarksetup{startatroot}
 
 \section{Introduction}\label{introduction}
@@ -372,14 +342,13 @@ What has not been frequently attempted in the nutrition access
 literature, however, is a serious comparison of multiple alternative
 policies to address the problem, which would require a multi-dimensional
 analysis of spatial access, store quality, and observed tradeoffs
-between the two. (Macfarlane et al., 2021) illustrated the potential for
-a utility-based model of access to establish relationships between urban
-green space access and health, and then continued that methodology into
-a policy analysis of park space during Covid-19
-(\textbf{macfarlane2022a?}). The potential for application of this
-methodology to the nutrition literature is well-motivated by the
-previous attempts as well as the lack of clear policy solutions (Wright
-et al., 2016).
+between the two. (\textbf{macfarlane2021b?}) illustrated the potential
+for a utility-based model of access to establish relationships between
+urban green space access and health, and then continued that methodology
+into a policy analysis of park space during Covid-19 (Macfarlane et al.,
+2022). The potential for application of this methodology to the
+nutrition literature is well-motivated by the previous attempts as well
+as the lack of clear policy solutions (Wright et al., 2016).
 
 This section describes how we construct a model of access to grocery
 stores in communities in Utah. We first describe the theoretical model,
@@ -391,17 +360,20 @@ apply it.
 A typical model of destination choice (Recker \& Kostyniuk, 1978) can be
 described as a random utility maximization model where the utility of an
 individual \(i\) choosing a particular destination \(j\) is
-\begin{equation}\phantomsection\label{eq-utility}{ U_{ij} = \beta_{s}f(k_{ij}) + \beta_{x}(X_j) }\end{equation}
-where \(f(k_{ij})\) is a function of the travel impedance or costs from
-\(i\) to \(j\) and \(X_{j}\) represents the location attributes of
-\(j\). The coefficients \(\beta\) can be estimated given sufficient data
-revealing the choices of individuals. The probability that individual at
-location \(i\) will choose alternative \(j\) from a choice set \(J\) can
-be estimated with a multinomial logit model (MNL) (McFadden, 1974),
-\begin{equation}\phantomsection\label{eq-mnl}{ P_i(j) = \frac{\exp(U_{ij})}{\sum_{j' \in J}{\exp(U_{ij'})}}}\end{equation}
-The overall fit of the model can be described with the Akaike
-Information Criterion (AIC) --- which should be minimized --- or by the
-McFadden likelihood ratio
+\begin{equation}\phantomsection\label{eq-utility}{
+ U_{ij} = \beta_{s}f(k_{ij}) + \beta_{x}(X_j) 
+}\end{equation} where \(f(k_{ij})\) is a function of the travel
+impedance or costs from \(i\) to \(j\) and \(X_{j}\) represents the
+location attributes of \(j\). The coefficients \(\beta\) can be
+estimated given sufficient data revealing the choices of individuals.
+The probability that individual at location \(i\) will choose
+alternative \(j\) from a choice set \(J\) can be estimated with a
+multinomial logit model (MNL) (McFadden, 1974),
+\begin{equation}\phantomsection\label{eq-mnl}{ 
+P_i(j) = \frac{\exp(U_{ij})}{\sum_{j' \in J}{\exp(U_{ij'})}}
+}\end{equation} The overall fit of the model can be described with the
+Akaike Information Criterion (AIC) --- which should be minimized --- or
+by the McFadden likelihood ratio
 \(\rho^2_0 = 1 - \ln\mathcal{L} / \ln\mathcal{L}_0\). In this ratio
 \(\ln{\mathcal{L}}\) is the model log-likelihood and
 \(\ln{\mathcal{L}_0}\) the log-likelihood of an alternative model where
@@ -414,15 +386,14 @@ not new, and the theory for doing so is described in (Ben-Akiva \&
 Lerman, 1985, p. 301). Effectively, the natural logarithm of the
 denominator in Equation~\ref{eq-mnl} represents the consumer surplus ---
 or total benefit --- available to person \(i\):
-
-\begin{equation}\phantomsection\label{eq-cs}{ CS_i = \ln\left(\sum_{j \in J} \exp(U_{ij})\right)}\end{equation}
-
-A difference in logsum measures may exist for a number of reasons that
-affect the utility functions described in Equation~\ref{eq-utility}. For
-example, individuals at different locations or with different mobility
-will see different impedance values \(k_{ij}\) and therefore affected
-utility. Changes to the attributes of the destinations \(X_j\) will
-likewise affect the utility.
+\begin{equation}\phantomsection\label{eq-cs}{ 
+CS_i = \ln\left(\sum_{j \in J} \exp(U_{ij})\right)
+}\end{equation} A difference in logsum measures may exist for a number
+of reasons that affect the utility functions described in
+Equation~\ref{eq-utility}. For example, individuals at different
+locations or with different mobility will see different impedance values
+\(k_{ij}\) and therefore affected utility. Changes to the attributes of
+the destinations \(X_j\) will likewise affect the utility.
 
 Despite the relative maturity of this theory, applications of
 utility-based access in the literature are still rare, outside of public
@@ -432,9 +403,9 @@ the ready availability of simpler methods on one hand (Logan et al.,
 2019), and the difficulty in obtaining a suitable estimation dataset for
 particular land uses on the other (Kaczynski et al., 2016). This second
 limitation has been somewhat improved by a new methodology developed by
-(\textbf{macfarlane2022a?}), relying on commercial location-based
-services data to estimate the affinity for simulated agents to visit
-destinations of varying attributes and distances.
+(Macfarlane et al., 2022), relying on commercial location-based services
+data to estimate the affinity for simulated agents to visit destinations
+of varying attributes and distances.
 
 \subsection{Data}\label{data}
 
@@ -454,7 +425,7 @@ Figure~\ref{fig-communities}.
 
 \centering{
 
-\pandocbounded{\includegraphics[keepaspectratio]{03_methods_files/figure-pdf/fig-communities-1.pdf}}
+\includegraphics{03_methods_files/figure-pdf/fig-communities-1.pdf}
 
 }
 
@@ -480,7 +451,7 @@ Navajo Tribe.
 \centering
 \begin{tabular}[t]{lrrr}
 \toprule
- & Utah & Salt Lake & San Juan\\
+  & Utah & Salt Lake & San Juan\\
 \midrule
 Total population & 627,098 & 655,830 & 7,091\\
 Total households & 171,538 & 216,731 & 2,090\\
@@ -666,7 +637,7 @@ block group centroids and Euclidean distances).
 
 \centering{
 
-\includegraphics[width=5in,height=\textheight,keepaspectratio]{03_methods_files/figure-pdf/fig-marketimp-1.pdf}
+\includegraphics[width=5in,height=\textheight]{03_methods_files/figure-pdf/fig-marketimp-1.pdf}
 
 }
 
@@ -747,7 +718,7 @@ representative sample.
 
 Emerging mobile device data, however, could reveal the typical home
 locations for people who are observed in the space of a particular
-store. (\textbf{macfarlane2022a?}) present a method for estimating
+store. (Macfarlane et al., 2022) present a method for estimating
 destination choice models from such data, which we repeat in this study.
 We provided a set of geometric polygons for the grocery stores of
 interest to StreetLight Data, Inc., a commercial location-based services
@@ -786,7 +757,7 @@ these three communities.
 
 \centering{
 
-\pandocbounded{\includegraphics[keepaspectratio]{04_estimation_files/figure-pdf/fig-nems-market-avail-1.pdf}}
+\includegraphics{04_estimation_files/figure-pdf/fig-nems-market-avail-1.pdf}
 
 }
 
@@ -815,7 +786,7 @@ March 2021 and March 2022 in food products (Bureau of Labor Statistics,
 
 \centering{
 
-\pandocbounded{\includegraphics[keepaspectratio]{04_estimation_files/figure-pdf/fig-nems-cost-avail-1.pdf}}
+\includegraphics{04_estimation_files/figure-pdf/fig-nems-cost-avail-1.pdf}
 
 }
 
@@ -888,7 +859,7 @@ Store Type: Other &  &  & -1.785** & -1.813**\\
  &  &  & (-12.641) & (-11.991)\\
 \midrule
 AIC & 31,874.44 & 49,051.55 & 41,985.6 & 25,402.43\\
-$\rho^2_0$ & 0.359 & 0.013 & 0.155 & 0.489\\
+\$\textbackslash{}rho\textasciicircum{}2\_0\$ & 0.359 & 0.013 & 0.155 & 0.489\\
 \bottomrule
 \multicolumn{5}{l}{\rule{0pt}{1em}* p $<$ 0.05, ** p $<$ 0.01}\\
 \multicolumn{5}{l}{\rule{0pt}{1em}t-statistics in parentheses}\\
@@ -959,7 +930,7 @@ Store Type: Other &  &  & 0.248* & 0.556**\\
  &  &  & (2.211) & (4.614)\\
 \midrule
 AIC & 42,820.66 & 42,541.44 & 40,195.01 & 31,863.31\\
-$\rho^2_0$ & 0.138 & 0.144 & 0.191 & 0.359\\
+\$\textbackslash{}rho\textasciicircum{}2\_0\$ & 0.138 & 0.144 & 0.191 & 0.359\\
 \bottomrule
 \multicolumn{5}{l}{\rule{0pt}{1em}* p $<$ 0.05, ** p $<$ 0.01}\\
 \multicolumn{5}{l}{\rule{0pt}{1em}t-statistics in parentheses}\\
@@ -998,7 +969,7 @@ Store Type: Other &  &  & -1.451** & -1.331**\\
  &  &  & (-28.680) & (-19.097)\\
 \midrule
 AIC & 40,811.4 & 35,119.64 & 37,230.81 & 23,556.77\\
-$\rho^2_0$ & 0.179 & 0.293 & 0.251 & 0.526\\
+\$\textbackslash{}rho\textasciicircum{}2\_0\$ & 0.179 & 0.293 & 0.251 & 0.526\\
 \bottomrule
 \multicolumn{5}{l}{\rule{0pt}{1em}* p $<$ 0.05, ** p $<$ 0.01}\\
 \multicolumn{5}{l}{\rule{0pt}{1em}t-statistics in parentheses}\\
@@ -1023,7 +994,7 @@ explain more of the model fit than the transportation impedance term.
 
 \centering{
 
-\pandocbounded{\includegraphics[keepaspectratio]{04_estimation_files/figure-pdf/fig-all-comp-1.pdf}}
+\includegraphics{04_estimation_files/figure-pdf/fig-all-comp-1.pdf}
 
 }
 
@@ -1071,7 +1042,7 @@ ethnic minorities in the region.
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight,keepaspectratio]{04_estimation_files/figure-pdf/fig-map-ut-1.pdf}
+\includegraphics[width=6in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-ut-1.pdf}
 
 }
 
@@ -1107,7 +1078,7 @@ for non-vehicle users.
 
 \centering{
 
-\includegraphics[width=4in,height=\textheight,keepaspectratio]{04_estimation_files/figure-pdf/fig-map-nocar-1.pdf}
+\includegraphics[width=4in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-nocar-1.pdf}
 
 }
 
@@ -1119,7 +1090,7 @@ for non-vehicle users.
 
 \centering{
 
-\includegraphics[width=4in,height=\textheight,keepaspectratio]{04_estimation_files/figure-pdf/fig-map-nocar-2.pdf}
+\includegraphics[width=4in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-nocar-2.pdf}
 
 }
 
@@ -1302,7 +1273,7 @@ compared the change in accessibility resulting from the improvement.
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s1results-1.pdf}
+\includegraphics[width=6in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s1results-1.pdf}
 
 }
 
@@ -1321,7 +1292,7 @@ a trip to a grocery store.
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s2results-1.pdf}
+\includegraphics[width=6in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s2results-1.pdf}
 
 }
 
@@ -1352,7 +1323,7 @@ close to you are already sufficient.
 
 \centering{
 
-\includegraphics[width=4in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s2sjut-1.pdf}
+\includegraphics[width=4in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s2sjut-1.pdf}
 
 }
 
@@ -1364,7 +1335,7 @@ close to you are already sufficient.
 
 \centering{
 
-\includegraphics[width=4in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s2sjut-2.pdf}
+\includegraphics[width=4in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s2sjut-2.pdf}
 
 }
 
@@ -1390,7 +1361,7 @@ on the order of \$0.25.
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s3results-1.pdf}
+\includegraphics[width=6in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s3results-1.pdf}
 
 }
 
@@ -1404,7 +1375,7 @@ Lake Valley.}
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight,keepaspectratio]{05_scenarios_files/figure-pdf/fig-s4results-1.pdf}
+\includegraphics[width=6in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s4results-1.pdf}
 
 }
 
@@ -1803,12 +1774,11 @@ Options} in {Denver}, {CO Grocery Stores}. \emph{Journal of Hunger \&
 Environmental Nutrition}, \emph{16}(3), 297--303.
 \url{https://doi.org/10.1080/19320248.2020.1741482}
 
-\bibitem[\citeproctext]{ref-macfarlane2021b}
-Macfarlane, G. S., Boyd, N., Taylor, J. E., \& Watkins, K. (2021).
-Modeling the impacts of park access on health outcomes: {A}
-utility-based accessibility approach. \emph{Environment and Planning B:
-Urban Analytics and City Science}, \emph{48}(8), 2289--2306.
-\url{https://doi.org/10.1177/2399808320974027}
+\bibitem[\citeproctext]{ref-macfarlane2022}
+Macfarlane, G. S., Voulgaris, C. T., \& Tapia, T. (2022). City parks and
+slow streets: {A} utility-based access and equity analysis.
+\emph{Journal of Transport and Land Use}, \emph{15}(1), 587--612.
+\url{https://doi.org/10.5198/jtlu.2022.2009}
 
 \bibitem[\citeproctext]{ref-mcfadden1974}
 McFadden, D. (1974). Conditional logit analysis of qualitative choice
@@ -1874,7 +1844,6 @@ Wright, J. D., Donley, A. M., Gualtieri, M. C., \& Strickhouser, S. M.
 \url{https://doi.org/10.1007/s12115-016-9993-8}
 
 \end{CSLReferences}
-
 
 
 
